- fixing visibility of image on homepage (try-two)

--- a/style/home.css
+++ b/style/home.css
@@ -14,7 +14,7 @@
 
 
 .hero-image {
-    background-image: url("https://github.com/prajeshElEvEn/Techsaarthi/blob/main/images/image.jpg");
+    background-image: url(images/image.jpg);
     /* background-color: #cccccc; */
     height: calc(100vh - 56px - 56px);
     background-repeat: no-repeat;
